[package]
name = "os_service_fabric"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AI assistant (ChatGPT) based on an idea by alisio85"]
description = "Dependency-free lifecycle, dependency graph, and health management framework for Rust-based operating system services."
repository = "https://github.com/alisio85/os_service_fabric"
documentation = "https://docs.rs/os_service_fabric"
readme = "README.md"
keywords = ["os", "kernel", "no_std", "lifecycle", "services"]
categories = ["embedded", "no-std", "operating-systems", "development-tools"]

[features]
default = []
std = []

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-none", "x86_64-unknown-linux-gnu"]
rustdoc-args = ["-D", "warnings"]

